  which will be used for delivering your revshare for content you contribute
  to AHAP.

--ahapTechTreeURL changed to ahap.info    Fixes #1065

--Ctrl-c in-game now copies recent speech log, from past 30 seconds, to system
  clipboard.  This will help non-English-speaking users who are trying to paste
  speech into translation services.  Fixes #1029




Server Fixes:

--Fixed typo in protocol.txt for server.  Fixes #1066  Thanks 4ferrocyanide  

--ahapGate now has show_vote_stats call.  Part of #1064

--Life Log stats (public data) now include status=N for normal player or
  status=D for d-town player.  Fixes #1041

--Fixed major bug when maxFlightDistanced.ini is 0 (current setting), which was
  preventing planes from landing anywhere but closest landing pad.
  Part of #1040

--Server now saves known landing positions to landingLocations.txt to re-load
  after next server startup, so landing pads aren't forgotten across server
  restarts.  Part of #1040





Version 423    2024-May-3

--Fixed so that aging-triggered music is delayed while rocket animation is
  playing (since aging is paused during the animation).

--Fixed so that sound/music demos for sliders on Settings page continue to
  work when revisiting Settings page after living a life.

--Support for playing Tom's music_99.ogg during YOU WON page.



Server Fixes:

--Support for periodic placements, to allow AHAP orbital locations to spawn
  every eleven hours.

--Fixed server crash when connecting to ahapGate fails (like when operating as
  a local test server).

--Blocked reflector log messages about individual server spreading and
  stop-spreading, since individual server spreading code no longer used, and
   that logging was misleading.




Version 419   2024-April-26

--Client displays current leader, and accepts leader vote, as github account
  name instead of email.

--tutorialEnabled setting now in contentSettings, and obeyed by client too.

--Windows client bundles now include OneLifeServer.
