@@ -1553,13 +1553,26 @@ void drawFrame( char inUpdate ) {
                         getAHAPVersionPage->
                         getResponseInt( "requiredVersionNumber" );
                     
+                    AppLog::infoF( "Got required AHAP version from server: %d", 
+                                   requiredVersionNumber );
+                    
                     if( dataVersionNumber < requiredVersionNumber ) {
                         
+                        AppLog::infoF( "Our AHAP dataVersionNumber = %d "
+                                       "< required version number %d", 
+                                       dataVersionNumber,
+                                       requiredVersionNumber );
+
                         // start ahap-specific auto-update
 
                         char *autoUpdateURL = 
                             getAHAPVersionPage->getResponse( "autoUpdateURL" );
                         
+                        
+                        AppLog::infoF( "Trying to start AHAP auto-update "
+                                       "from update server %s",
+                                       autoUpdateURL );
+
                         char updateStarted = 
                             startUpdate( autoUpdateURL, dataVersionNumber,
                                          // do NOT skip universal bundles
@@ -1570,7 +1583,9 @@ void drawFrame( char inUpdate ) {
                         
                         delete [] autoUpdateURL;
                             
-                        if( ! updateStarted ) {
+                        if( ! updateStarted ) {                           
+                            AppLog::error( "Starting AHAP data update failed" );
+
                             currentGamePage = finalMessagePage;
                                 
                             finalMessagePage->setMessageKey( 
@@ -1592,6 +1607,11 @@ void drawFrame( char inUpdate ) {
                             }
                         }
                     else {
+                        AppLog::infoF( "Our AHAP dataVersionNumber %d >= "
+                                       "required version number %d", 
+                                       dataVersionNumber,
+                                       requiredVersionNumber );
+                    
                         if( ! loadingStarted ) {
                             
                             startSpriteLoading();
@@ -1612,7 +1632,7 @@ void drawFrame( char inUpdate ) {
                     }
                 else {
                     AppLog::error( 
-                        "Failed to fetch ahapVersion.txt from server." );
+                        "Failed to fetch ahapVersion from server." );
                     
                     if( !loadingStarted ) {
                         startSpriteLoading();
@@ -1635,6 +1655,9 @@ void drawFrame( char inUpdate ) {
             }
         else  if( currentGamePage == autoAHAPUpdatePage ) {
             if( autoAHAPUpdatePage->checkSignal( "failed" ) ) {
+
+                AppLog::error( "AHAP auto-update failed." );
+                
                 currentGamePage = finalMessagePage;
                         
                 finalMessagePage->setMessageKey( "upgradeMessage" );
@@ -2162,6 +2185,10 @@ void drawFrame( char inUpdate ) {
                             "requiredVersionNumber" );
                     
                     if( versionNumber < requiredVersion ) {
+                        
+                        AppLog::infoF( "Our OHOL version number %d < "
+                                       "required version number %d",
+                                       versionNumber, requiredVersion );
 
                         if( SettingsManager::getIntSetting( 
                                 "useSteamUpdate", 0 ) ) {
@@ -2173,12 +2200,17 @@ void drawFrame( char inUpdate ) {
                                 fclose( f );
                                 }
                             
+                            AppLog::info( "Lauching steamGateClient to tell "
+                                          "Steam that the app is dirty." );
+
                             // launch steamGateClient in parallel
                             // it will tell Steam that the app is dirty
                             // and needs to be updated.
                             runSteamGateClient();
                             
-
+                            
+                            AppLog::info( "Telling player to update the game "
+                                          "through Steam" );
                             
                             currentGamePage = finalMessagePage;
                                 
@@ -2191,6 +2223,11 @@ void drawFrame( char inUpdate ) {
                             char *autoUpdateURL = 
                                 getServerAddressPage->getResponse( 
                                     "autoUpdateURL" );
+                            
+                            AppLog::infoF( "Trying to start OHO auto-update "
+                                           "from update server %s",
+                                           autoUpdateURL );
+                            
 
                             char updateStarted = 
                                 startUpdate( autoUpdateURL, versionNumber,
@@ -2200,6 +2237,10 @@ void drawFrame( char inUpdate ) {
                             delete [] autoUpdateURL;
                             
                             if( ! updateStarted ) {
+                            
+                                AppLog::error( "Staring OHOL auto-update "
+                                               "failed" );
+
                                 currentGamePage = finalMessagePage;
                                 
                                 finalMessagePage->setMessageKey( 
@@ -2223,6 +2264,9 @@ void drawFrame( char inUpdate ) {
             }
         else  if( currentGamePage == autoUpdatePage ) {
             if( autoUpdatePage->checkSignal( "failed" ) ) {
+
+                AppLog::error( "OHOL auto-update failed." );
+
                 currentGamePage = finalMessagePage;
                         
                 finalMessagePage->setMessageKey( "upgradeMessage" );
